Update code to use older Java versions for broader compatibility
Replace Java 21+ List methods (e.g., `getLast()`, `getFirst()`, `reversed()`) with compatible alternatives like `get(index)` and manual reversal logic to support Java 19, updating `BaseBuilder.java` and `MyOptimizer.java`.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: bded2988-93e5-426b-869d-db860adb061c
Replit-Commit-Checkpoint-Type: full_checkpoint
Replit-Commit-Event-Id: bb88a61e-8e26-4eff-9c68-ff38e36d2c13
Replit-Helium-Checkpoint-Created: true